--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ iniconfig==2.0.0
 packaging==24.2
 pluggy==1.5.0
 pydantic==2.10.3
-pydantic_core==2.27.1
+pydantic-core==2.27.1
 pytest==8.3.4
 pytest-asyncio==0.24.0
 setuptools==75.6.0
@@ -24,3 +24,5 @@ ruff==0.8.1
 SQLAlchemy==2.0.36
 alembic==1.14.0
 aiosqlite==0.20.0
+pydantic-settings==2.6.1
+python-dotenv==1.0.1
