--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,6 +1,18 @@
 # Use Python 3.12 slim image as base
 FROM python:3.12-slim
 
+# Install the PostgreSQL client tools and dependencies
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends postgresql-client \
+    && rm -rf /var/lib/apt/lists/*
+
+# Verify the installation of pg_isready
+RUN pg_isready --version
+
+# (Optional) Install any Python dependencies you need
+# For example, if you need psycopg2 or psycopg2-binary
+RUN pip install psycopg2-binary
+
 # Set working directory
 WORKDIR /app
 
@@ -13,5 +25,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the application and test files
 COPY . .
 
+ENV DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5433/test_db
+
 # Set environment variable for testing
 ENV PYTHONPATH=/app
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
