--- a/requirements.txt
+++ b/requirements.txt
@@ -24,5 +24,6 @@ ruff==0.8.1
 SQLAlchemy==2.0.36
 alembic==1.14.0
 aiosqlite==0.20.0
+asyncpg>=0.30.0
 pydantic-settings==2.6.1
 python-dotenv==1.0.1
